--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="about-content">
         <div  class="about">
-            <p >Hello! My name is <span>Ayush Chaurasiya</span>, and I am a passionate <span >Game Development</span> and <span>Web Development</span>. I thrive on challenges and am always eager to learn and improve.
+            <p >Hello! My name is <span>Ayush Chaurasiya</span>, and I am a passionate <span >Game Developer</span> and <span>Web Developer</span>. I thrive on challenges and am always eager to learn and improve.
             I am pursuing  Bachelor of Technology in <span>Environmental Engineering</span> from <span>Indian Institute of Technology, Dhanbad</span>. My work is driven by a commitment to quality and a passion for innovation. <br >I believe in the power of continuous learning and strive to stay updated with the latest trends and advancements in my field. I am dedicated to delivering exceptional results and making a positive impact through my work. Collaboration and creativity are at the heart of everything I do, and I am always open to new opportunities and connections.</p>
         </div>
         <div class="profile-photo">
